--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -4,3 +4,9 @@
     box-sizing: border-box;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+.home{
+    .middlePart{
+        display: flex;
+        
+    }
+}
