--- a/src/component/sidebar/SideBar.scss
+++ b/src/component/sidebar/SideBar.scss
@@ -1,4 +1,58 @@
 .sideBar{
-    width: 400px;
+    flex: 3;
     padding: 20px;  
+    height: calc(100vh - 55px);
+    overflow-y: scroll;
+    .sideBarWrapper{
+        margin: 10px;
+        .sideBarList{
+            display: flex;
+            flex-direction: column;
+            gap: 23px;
+            .sideBarListItem{
+                list-style-type: none;
+                display: flex;
+                align-items: center;
+                gap: 10px;
+                cursor: pointer;
+                .sideBarIcon{
+                    font-size: 30px;
+                }
+                .sideBarListText{
+                    font-size: 18px;
+                }
+            }
+            .sideBarShowmore{
+                padding: 10px 30px;
+                font-size: 16px;
+                font-weight: 600;
+                cursor: pointer;
+            }
+        }
+        .HRline{
+            margin-top: 20px;
+        }
+        .sideBarFriendList{
+            margin-top: 30px;
+            display: flex;
+            flex-direction: column;
+            gap: 30px;
+            .sideBarFriend{
+                list-style-type: none;
+                display: flex;
+                align-items: center;
+                gap: 15px;
+                .sideBarFriendImg{
+                    height: 40px;
+                    width: 40px;
+                    object-fit: cover;
+                    border-radius: 50%;
+                }
+                .sideBarFriendName{
+                    font-size: 17px;
+                    font-weight: 500;
+                }
+            }
+        }
+    }
 }
