--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -1,12 +1,21 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-.home{
-    .middlePart{
-        display: flex;
-        
-    }
+::-webkit-scrollbar{
+  width: 5px;
+}
+::-webkit-scrollbar-track{
+  background-color: white;
+}
+::-webkit-scrollbar-thumb{
+  background-color: grey;
+  border-radius: 20px;
+}
+.home {
+  .middlePart {
+    display: flex;
+  }
 }
