--- a/src/component/rightbar/RightBar.scss
+++ b/src/component/rightbar/RightBar.scss
@@ -1,3 +1,56 @@
-.rightBar{
-    flex: 3.5;
+.rightBar {
+  flex: 3.5;
+  padding: 10px;
+  .brithInfo {
+    display: flex;
+    align-items: center;
+    margin-top: 5px;
+    .gitIcon {
+      height: 40px;
+      width: 40px;
+    }
+  }
+  .ADInfo {
+    margin: 20px 0px;
+    .AD {
+      border-radius: 5px;
+      max-width: 100%;
+    }
+  }
+  .rightBarTitle {
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 10px;
+  }
+  .rightBarInfo {
+    margin-bottom: 30px;
+    .rightBarInfoItem {
+      margin-bottom: 10px;
+      .rightBarInfoKey {
+        font-weight: 500;
+        margin-right: 15px;
+        color: #555;
+      }
+      .rightBarInfoValue {
+        font-weight: 300;
+      }
+    }
+  }
+  .rightBarFollowings {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    .rightBarFollowing {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 20px;
+      cursor: pointer;
+      .rightBarFollowingsImg {
+        width: 120px;
+        height: 120px;
+        object-fit: cover;
+        border-radius: 5px;
+      }
+    }
+  }
 }
