--- a/src/component/sidebar/SideBar.scss
+++ b/src/component/sidebar/SideBar.scss
@@ -49,10 +49,12 @@
                     width: 40px;
                     object-fit: cover;
                     border-radius: 50%;
+                    cursor: pointer;
                 }
                 .sideBarFriendName{
                     font-size: 17px;
                     font-weight: 500;
+                    cursor: pointer;
                 }
             }
         }
