--- a/src/component/onlineFriend/Online.scss
+++ b/src/component/onlineFriend/Online.scss
@@ -11,6 +11,7 @@
         width: 40px;
         border-radius: 50%;
         position: relative;
+        cursor: pointer;
       }
       .greenIndicator{
         position: absolute;
@@ -21,6 +22,9 @@
         border-radius: 50%;
         border: 2px solid white;
         background-color: green;
+      }
+      .onlineFriendName{
+        cursor: pointer;
       }
     }
   }
