--- a/src/component/share/Share.scss
+++ b/src/component/share/Share.scss
@@ -15,6 +15,7 @@
         width: 50px;
         object-fit: cover;
         border-radius: 50%;
+        cursor: pointer;
       }
       input {
         height: 40px;
